--- a/src/main/resources/templates/IngresarPeritaje.html
+++ b/src/main/resources/templates/IngresarPeritaje.html
@@ -21,58 +21,60 @@
     <title th:text="'Ausys - '+ ${titulo}"></title>
 </head>
 
-<body>
+<body style="background-color: #b1b7b9;">
     <th:block th:replace="components/navbar :: navbar"></th:block>
     <div class="container">
-        <h1 th:text="${titulo}"></h1>
-        <div>
-            <form th:action="@{/write/validarPeritaje}" th:object="${peritaje}" method="GET">
+        <div class="card" style="padding: 2em;">
 
-                <label for="id_peritaje">Identficador del registro: </label>
-                <input type="text" id="id_peritaje" th:field="*{id_peritaje}">
-                <div th:if="${#fields.hasErrors('id_peritaje')}" th:errors="*{id_peritaje}" class="alert alert-danger"
-                    role="alert"></div>
-                <br>
+            <h1 th:text="${titulo}"></h1>
+            <div>
+                <form th:action="@{/write/validarPeritaje}" th:object="${peritaje}" method="GET">
 
-                <label for="identificado">Persona identificada: </label>
-                <input type="checkbox" id="identificado" th:field="*{identificado}">
-                <br>
+                    <label for="id_peritaje">Identificador del registro: </label>
+                    <input type="text" id="id_peritaje" th:field="*{id_peritaje}">
+                    <div th:if="${#fields.hasErrors('id_peritaje')}" th:errors="*{id_peritaje}"
+                        class="alert alert-danger" role="alert"></div>
+                    <br>
 
-                <label for="edad_estimada">Edad estimada: </label>
-                <input type="number" id="edad_estimada" th:field="*{edad_estimada}">
-                <div th:if="${#fields.hasErrors('edad_estimada')}" th:errors="*{edad_estimada}"
-                    class="alert alert-danger" role="alert"></div>
-                <br>
+                    <label for="identificado">Persona identificada: </label>
+                    <input type="checkbox" id="identificado" th:field="*{identificado}">
+                    <br>
 
-                <label class="col-form-label">Departamento:</label>
-                <select class="form-control" id="deptoSelect">
-                    <option value="col">Selecciona una opci&oacute;n</option>
-                    <option th:each="departamento : ${departamentos}" th:value="${departamento.id_departamento}"
-                        th:id="${departamento.id_departamento}" th:text="${departamento.departamento}">
-                    </option>
-                </select>
+                    <label for="edad_estimada">Edad estimada: </label>
+                    <input type="number" id="edad_estimada" th:name="edad_estimada" th:field="*{edad_estimada}">
+                    <div th:if="${#fields.hasErrors('edad_estimada')}" th:errors="*{edad_estimada}"
+                        class="alert alert-danger" role="alert"></div>
+                    <br>
 
-                <br>
+                    <label class="col-form-label">Departamento:</label>
+                    <select class="form-control" id="deptoSelect">
+                        <option value="col">Selecciona una opci&oacute;n</option>
+                        <option th:each="departamento : ${departamentos}" th:value="${departamento.id_departamento}"
+                            th:id="${departamento.id_departamento}" th:text="${departamento.departamento}">
+                        </option>
+                    </select>
 
-                <label class="col-form-label">Municipio:</label>
-                <select class="form-control" id="municipioSelect">
-                    <option value="col1">Selecciona una opci&oacute;n</option>
-                    <option th:each="municipio : ${municipios}" th:id="${municipio.departamento.id_departamento}"
-                        th:value="${municipio.id_municipio}" th:text="${municipio.municipio}"></option>
-                </select>
-                <br>
+                    <br>
 
-                <label class="col-form-label">Division pol&iacute;tica:</label>
-                <select class="form-control" id="divisionSelect" th:field="*{division.id_division}">
-                    <option value="col2">Selecciona una opci&oacute;n</option>
-                    <option th:each="division : ${divisiones}"
-                        th:id="${division.municipio.id_municipio}" th:value="${division.id_division}"
-                        th:text="${division.division}"></option>
-                </select>
+                    <label class="col-form-label">Municipio:</label>
+                    <select class="form-control" id="municipioSelect">
+                        <option value="col1">Selecciona una opci&oacute;n</option>
+                        <option th:each="municipio : ${municipios}" th:id="${municipio.departamento.id_departamento}"
+                            th:value="${municipio.id_municipio}" th:text="${municipio.municipio}"></option>
+                    </select>
+                    <br>
 
-                <input type="submit" value="Siguiente" class="btn btn-primary">
+                    <label class="col-form-label">Division pol&iacute;tica:</label>
+                    <select class="form-control" id="divisionSelect" th:field="*{division.id_division}">
+                        <option value="col2">Selecciona una opci&oacute;n</option>
+                        <option th:each="division : ${divisiones}" th:id="${division.municipio.id_municipio}"
+                            th:value="${division.id_division}" th:text="${division.division}"></option>
+                    </select>
+                    <br>
+                    <input type="submit" value="Siguiente" class="btn btn-primary">
 
-            </form>
+                </form>
+            </div>
         </div>
     </div>
 
@@ -91,6 +93,9 @@
                 $("#divisionSelect").children('option').hide();
                 $("#divisionSelect").children("option[id=" + $("#municipioSelect").val() + "]").show()
             })
+        });
+        $(function () {
+            $("#DUI").prop('required', true);
         });
     </script>
 
