--- a/src/main/resources/templates/verPeritaje.html
+++ b/src/main/resources/templates/verPeritaje.html
@@ -54,11 +54,17 @@
                 </div>
                 <div>
                     <b class="d-inline">Nombre: </b>
-                    <p class="d-inline" th:text="${desaPeri.nombre}"></p>
+                    <p class="d-inline" th:if="${desaPeri.peritaje.edad_estimada} < 18"
+                        th:text="${#strings.substring(desaPeri.nombre, 0,1) + '...'}"></p>
+                    <p class="d-inline" th:unless="${desaPeri.peritaje.edad_estimada} < 18" th:text="${desaPeri.nombre}"></p>
+                    
                 </div>
                 <div>
                     <b class="d-inline">Apellido: </b>
-                    <p class="d-inline" th:text="${desaPeri.apellido}"></p>
+                    
+                    <p class="d-inline" th:if="${desaPeri.peritaje.edad_estimada} < 18"
+                        th:text="${#strings.substring(desaPeri.apellido, 0,1) + '...'}"></p>
+                    <p class="d-inline" th:unless="${desaPeri.peritaje.edad_estimada} < 18" th:text="${desaPeri.apellido}"></p>
                 </div>
                 <div>
                     <b class="d-inline">Sexo: </b>
