--- a/src/main/resources/templates/IngresarPeritaje2.html
+++ b/src/main/resources/templates/IngresarPeritaje2.html
@@ -38,7 +38,7 @@
 
                 <th:block th:replace="components/form-registros :: registros"></th:block>
                 <input type="hidden" th:field="${peritaje.id_peritaje}" th:value="id_peritaje">
-                <input type="text" th:value="${age}" id="age" th:name="edad_estimada">
+                <input type="hidden" th:value="${age}" id="age" th:name="edad_estimada">
                 <input type="submit" value="Ingresar Peritaje" class="btn btn-primary">
 
             </form>
