--- a/src/main/resources/templates/editarPeritaje.html
+++ b/src/main/resources/templates/editarPeritaje.html
@@ -39,7 +39,7 @@
                 <br>
 
                 <label for="edad_estimada">Edad estimada: </label>
-                <input type="number" id="edad_estimada" th:field="*{edad_estimada}">
+                <input type="number" id="edad_estimada" th:name="edad_estimada" th:field="*{edad_estimada}">
                 <div th:if="${#fields.hasErrors('edad_estimada')}" th:errors="*{edad_estimada}"
                     class="alert alert-danger" role="alert"></div>
                 <br>
