--- a/src/main/resources/templates/editarPeritaje2.html
+++ b/src/main/resources/templates/editarPeritaje2.html
@@ -42,7 +42,7 @@
 
                 <th:block th:replace="components/form-registros :: registros"></th:block>
                 <input type="hidden" th:field="*{peritaje.id_peritaje}" th:value="id_peritaje">
-
+				<input type="hidden" th:value="${age}" id="age" th:name="age">
                 <input type="submit" value="Ingresar Peritaje" class="btn btn-primary">
 
             </form>
