--- a/src/main/resources/templates/listaPeritajes.html
+++ b/src/main/resources/templates/listaPeritajes.html
@@ -60,6 +60,7 @@
                                 <input th:name="peritajeLastname" type="hidden" th:value="${desaPeri.apellido}">
                                 <input th:name="id_peritaje" type="hidden" th:value=${desaPeri.id_peritaje}>
                                 <input th:name="id_desaperi" type="hidden" th:value=${desaPeri.id_desaperi}>
+                                <input th:name="edad_estimada" type="hidden" th:value="${desaPeri.edad_estimada}">
                                 <input type="submit" class="btn btn-primary" value="Ver">
                             </form>
                             <form class="p-1"
