--- a/src/main/resources/templates/IngresarPeritaje.html
+++ b/src/main/resources/templates/IngresarPeritaje.html
@@ -31,10 +31,13 @@
                 <form th:action="@{/write/validarPeritaje}" th:object="${peritaje}" method="GET">
 
                     <label for="id_peritaje">Identificador del registro: </label>
-                    <input type="text" id="id_peritaje" th:field="*{id_peritaje}">
+                    <input type="text" id="id_peritaje" th:name="id_peritaje" th:field="*{id_peritaje}">
                     <div th:if="${#fields.hasErrors('id_peritaje')}" th:errors="*{id_peritaje}"
                         class="alert alert-danger" role="alert"></div>
+                        <div th:if="${iderror}" th:text="${iderror}"
+                        class="alert alert-danger" role="alert"></div>
                     <br>
+                    
 
                     <label for="identificado">Persona identificada: </label>
                     <input type="checkbox" id="identificado" th:field="*{identificado}">
@@ -67,8 +70,10 @@
                     <label class="col-form-label">Division pol&iacute;tica:</label>
                     <select class="form-control" id="divisionSelect" th:field="*{division.id_division}">
                         <option value="col2">Selecciona una opci&oacute;n</option>
-                        <option th:each="division : ${divisiones}" th:id="${division.municipio.id_municipio}"
-                            th:value="${division.id_division}" th:text="${division.division}"></option>
+                        <option th:each="division : ${divisiones}" 
+                        th:id="${division.municipio.id_municipio}"
+                            th:value="${division.id_division}" 
+                            th:text="${division.division}"></option>
                     </select>
                     <br>
                     <input type="submit" value="Siguiente" class="btn btn-primary">
