--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -18,7 +18,7 @@
         integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF"
         crossorigin="anonymous"></script>
     <link rel="stylesheet" th:href="@{/styles.css}">
-    <title th:text="'Ausys - '+ ${titulo}"></title>
+    <title th:text="'Ausys - Inicio'"></title>
 </head>
 
 <body>
