--- a/src/main/resources/templates/IngresarPeritaje.html
+++ b/src/main/resources/templates/IngresarPeritaje.html
@@ -60,21 +60,12 @@
                     <br>
 
                     <label class="col-form-label">Municipio:</label>
-                    <select class="form-control" id="municipioSelect">
+                    <select class="form-control" id="municipioSelect" th:field="*{municipio.id_municipio}">
                         <option value="col1">Selecciona una opci&oacute;n</option>
                         <option th:each="municipio : ${municipios}" th:id="${municipio.departamento.id_departamento}"
                             th:value="${municipio.id_municipio}" th:text="${municipio.municipio}"></option>
                     </select>
                     <br>
-
-                    <label class="col-form-label">Division pol&iacute;tica:</label>
-                    <select class="form-control" id="divisionSelect" th:field="*{division.id_division}">
-                        <option value="col2">Selecciona una opci&oacute;n</option>
-                        <option th:each="division : ${divisiones}" 
-                        th:id="${division.municipio.id_municipio}"
-                            th:value="${division.id_division}" 
-                            th:text="${division.division}"></option>
-                    </select>
                     <br>
                     <input type="submit" value="Siguiente" class="btn btn-primary">
 
@@ -89,14 +80,6 @@
             $("#deptoSelect").change(function () {
                 $("#municipioSelect").children('option').hide();
                 $("#municipioSelect").children("option[id=" + $("#deptoSelect").val() + "]").show()
-            })
-        });
-
-        $(document).ready(function () {
-            $("#divisionSelect").children('option:gt(0)').hide();
-            $("#municipioSelect").change(function () {
-                $("#divisionSelect").children('option').hide();
-                $("#divisionSelect").children("option[id=" + $("#municipioSelect").val() + "]").show()
             })
         });
         $(function () {
