Se arreglo problema al editar peritaje y desaparecido

--- a/src/main/resources/templates/editarPeritaje.html
+++ b/src/main/resources/templates/editarPeritaje.html
@@ -43,7 +43,7 @@
                 <div th:if="${#fields.hasErrors('edad_estimada')}" th:errors="*{edad_estimada}"
                     class="alert alert-danger" role="alert"></div>
                 <br>
-                <input type="hidden" th:field="*{division.id_division}">
+                <!--<input type="hidden" th:field="*{division.id_division}">-->
 
 
                 <input type="submit" value="Siguiente" class="btn btn-primary">
