--- a/src/main/resources/templates/verDesaparecido.html
+++ b/src/main/resources/templates/verDesaparecido.html
@@ -45,6 +45,10 @@
                     <p class="d-inline" th:text="${desaPeri.desaparecido.contacto_familiar}"></p>
                 </div>
                 <div>
+                    <b class="d-inline">Municipio: </b>
+                    <p class="d-inline" th:text="${desaPeri.desaparecido.municipio.id_municipio}"></p>
+                </div>
+                <div>
                     <b class="d-inline">Direcci&oacute;n: </b>
                     <p class="d-inline" th:text="${desaPeri.direccion}"></p>
                 </div>
