--- a/src/main/resources/templates/IngresarPeritaje.html
+++ b/src/main/resources/templates/IngresarPeritaje.html
@@ -34,10 +34,9 @@
                     <input type="text" id="id_peritaje" th:name="id_peritaje" th:field="*{id_peritaje}">
                     <div th:if="${#fields.hasErrors('id_peritaje')}" th:errors="*{id_peritaje}"
                         class="alert alert-danger" role="alert"></div>
-                        <div th:if="${iderror}" th:text="${iderror}"
-                        class="alert alert-danger" role="alert"></div>
+                    <div th:if="${iderror}" th:text="${iderror}" class="alert alert-danger" role="alert"></div>
                     <br>
-                    
+
 
                     <label for="identificado">Persona identificada: </label>
                     <input type="checkbox" id="identificado" th:field="*{identificado}">
@@ -50,28 +49,34 @@
                     <br>
 
                     <label class="col-form-label">Departamento:</label>
-                    <select class="form-control" id="deptoSelect">
-                        <option value="col">Selecciona una opci&oacute;n</option>
+                    <select class="form-control" id="deptoSelect" th:name="deptoSelect">
+                        <option value="0">Selecciona una opci&oacute;n</option>
                         <option th:each="departamento : ${departamentos}" th:value="${departamento.id_departamento}"
                             th:id="${departamento.id_departamento}" th:text="${departamento.departamento}">
                         </option>
                     </select>
+                    <div th:if="${deptoalert}" th:text="${deptoalert}" class="alert alert-danger" role="alert"></div>
 
                     <br>
 
                     <label class="col-form-label">Municipio:</label>
                     <select class="form-control" id="municipioSelect" th:field="*{municipio.id_municipio}">
-                        <option value="col1">Selecciona una opci&oacute;n</option>
+                        <option value="0" selected="selected">Selecciona una opci&oacute;n</option>
                         <option th:each="municipio : ${municipios}" th:id="${municipio.departamento.id_departamento}"
                             th:value="${municipio.id_municipio}" th:text="${municipio.municipio}"></option>
                     </select>
-                    <br>
-                    <br>
-                    <input type="submit" value="Siguiente" class="btn btn-primary">
-
-                </form>
+                    <div th:if="${municipioalert}" th:text="${municipioalert}" class="alert alert-danger" role="alert">
+                    </div>
+                    <div th:if="${#fields.hasErrors('municipio.id_municipio')}" th:errors="*{municipio.id_municipio}"
+                        class="alert alert-danger" role="alert"></div>
             </div>
+            <br>
+            <br>
+            <input type="submit" value="Siguiente" class="btn btn-primary">
+
+            </form>
         </div>
+    </div>
     </div>
 
     <script>
