--- a/src/main/resources/templates/IngresarDesaparecido.html
+++ b/src/main/resources/templates/IngresarDesaparecido.html
@@ -56,21 +56,24 @@
                     class="alert alert-danger" role="alert"></div>
                 <br>
                 <label class="col-form-label">Departamento:</label>
-                <select class="form-control" id="deptoSelect">
-                    <option value="col">Selecciona una opci&oacute;n</option>
+                <select class="form-control" id="deptoSelect" th:name="deptoSelect">
+                    <option value="0">Selecciona una opci&oacute;n</option>
                     <option th:each="departamento : ${departamentos}" th:value="${departamento.id_departamento}"
                         th:id="${departamento.id_departamento}" th:text="${departamento.departamento}">
                     </option>
                 </select>
+                <div th:if="${deptoalert}" th:text="${deptoalert}" class="alert alert-danger" role="alert"></div>
 
                 <br>
 
                 <label class="col-form-label">Municipio:</label>
                 <select class="form-control" id="municipioSelect" th:field="*{municipio.id_municipio}">
-                    <option value="col1">Selecciona una opci&oacute;n</option>
+                    <option value="0">Selecciona una opci&oacute;n</option>
                     <option th:each="municipio : ${municipios}" th:id="${municipio.departamento.id_departamento}"
                         th:value="${municipio.id_municipio}" th:text="${municipio.municipio}"></option>
                 </select>
+                <div th:if="${municipioalert}" th:text="${municipioalert}" class="alert alert-danger" role="alert">
+                    </div>
                 <br>
 
                 <input type="submit" value="Siguiente" class="btn btn-primary">
