--- a/src/main/resources/templates/components/navbar.html
+++ b/src/main/resources/templates/components/navbar.html
@@ -66,7 +66,7 @@
 					<i><span class="text-white" sec:authentication="principal.authorities">Roles</span></i>&nbsp;
 				</div>
 				<form th:action="@{/logout}" method="post">
-					<input type="submit" value="Logout" class="btn btn-primary bEdit" />
+					<input type="submit" value="Salir" class="btn btn-primary bEdit" />
 				</form>
 			</div>
 		</div>
