--- a/src/main/resources/templates/listaDesaparecidos.html
+++ b/src/main/resources/templates/listaDesaparecidos.html
@@ -52,6 +52,7 @@
                                 method="GET">
                                 <input th:name="id_desaparecido" type="hidden" th:value=${desaPeri.id_desaparecido}>
                                 <input th:name="id_desaperi" type="hidden" th:value=${desaPeri.id_desaperi}>
+                                <input th:name="age" type="hidden" th:value=${desaPeri.age}>
                                 <input type="submit" class="btn btn-primary" value="Ver">
                             </form>
                             <form class="p-1"
