--- a/src/main/resources/templates/verDesaparecido.html
+++ b/src/main/resources/templates/verDesaparecido.html
@@ -72,7 +72,7 @@
                     <b class="d-inline">Informaci&oacute;n adicional: </b>
                     <p class="d-inline" th:text="${desaPeri.informacion_adicional}"></p>
                 </div>
-                <div>
+                <div th:if="${desaPeri.desaparecido.edad_estimada} >=18">
                     <b class="d-inline">DUI: </b>
                     <p class="d-inline" th:text="${desaPeri.Dui}"></p>
                 </div>
